--- a/WechatAu/app/src/main/res/values/strings.xml
+++ b/WechatAu/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">WeChat</string>
+    <string name="nav_home_name">HOME</string>
+    <string name="nav_cat_name">CART</string>
+    <string name="nav_account_name">ACCOUNT</string>
+
+    <string name="home_search_text">ORDER INQUIRY</string>
+    <string name="home_create_break_title">CREATE YOUR BREAK</string>
+    <string name="home_create_break_text">Your choice of premium Australian chocolate, crisp batch baked wafers, gourmet ingredients &amp; customised packaging, handcrafted to order by our expert chocolatiers.</string>
+
 </resources>
